# jenga

./: README.md  SPECIFICATIONS.md  dune-project  jenga.opam
examples/: arithmetic.jg  collatz.jg  fibonacci.jg  iteration.jg  parity.jg  prefix_sum.jg  rule110.jg
lib/: ast.ml  dune  env.ml  evaluate.ml  exceptions.ml  lexer.mll  parser.mly  types.ml
test/: dune  test_env.ml  test_lexer.ml  test_parser.ml  test_types.ml
